# nanobot-community-hub

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: hub-ci.yml
nanobot_hub/: __init__.py  app.py  auth.py  store.py
nanobot_hub/static/: styles.css
nanobot_hub/templates/: admin.html  base.html  community_stats.html  discover.html  login.html  mcp_detail.html  setup_admin.html  showcase.html  showcase_detail.html  stack_detail.html  stacks.html
nanobot_hub/templates/partials/: discover_results.html  showcase_results.html  stacks_results.html
scripts/: capture_hub_screenshots.js  capture_hub_screenshots.sh
tests/: conftest.py  test_api_behavior.py  test_app.py  test_routes_and_pages.py
