[project]
name = "nanobot-community-hub"
version = "0.1.0"
description = "Community marketplace, stats, stacks, and showcase backend for the Nanobot ecosystem"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "nanobot contributors"}]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "sqlalchemy>=2.0.39,<3.0.0",
    "psycopg[binary]>=3.2.6,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_hub"]

[tool.hatch.build]
include = [
    "nanobot_hub/**/*.py",
    "nanobot_hub/static/**/*",
    "nanobot_hub/templates/**/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
